shared-cache/varnish-stateful.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: cache-statefulset
  namespace: varnish-cache
  labels:
    app: cache
spec:
  serviceName: cache-service
  replicas: 2
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: cache
  template:
    metadata:
      labels:
        app: cache
    spec:
      containers:
      - name: cache
        image: quay.io/mittwald/kube-httpcache:stable
        imagePullPolicy: Always
        args:
        - -admin-addr=0.0.0.0
        - -admin-port=6083
        - -signaller-enable
        - -signaller-port=8090
        - -frontend-watch
        - -frontend-namespace=varnish-cache
        - -frontend-service=cache-service
        - -frontend-portname=http
        - -frontend-port=8080
        - -backend-watch
        - -backend-namespace=varnish-cache
        - -backend-service=nginx
        - -backend-portname=portnginx
        - -varnish-secret-file=/etc/varnish/k8s-secret/secret
        - -varnish-vcl-template=/etc/varnish/tmpl/default.vcl.tmpl
        - -varnish-storage=malloc,512M
        volumeMounts:
        - name: template
          mountPath: /etc/varnish/tmpl
        - name: secret
          mountPath: /etc/varnish/k8s-secret
        ports:
        - containerPort: 8080
          name: http
        - containerPort: 8090
          name: signaller
      serviceAccountName: kube-httpcache
      restartPolicy: Always
      volumes:
      - name: template
        configMap:
          name: vcl-template
      - name: secret
        secret:
          secretName: varnish-secret
