shared-cache/nginx.yaml
kind: Service
apiVersion: v1
metadata:
  name: nginx
  namespace: varnish-cache
  labels:
    app: nginx
spec:
  selector:
    app: nginx
  ports:
  - name: "portnginx"
    port: 80
    protocol: TCP
    targetPort: 80
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: varnish-cache
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          protocol: TCP
