shared-cache/varnish-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cache-service
  namespace: varnish-cache
  labels:
    app: cache
spec:
  ports:
  - name: "http"
    port: 8080
    targetPort: http
  - name: "signaller"
    port: 8090
    targetPort: signaller
  selector:
    app: cache
