shared-cache/varnish-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: varnish-ingress
  namespace: varnish-cache
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: shared-cache-poc.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cache-service
            port:
              number: 8080
